fixed style in img and add flex wrap for mobilke web

--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ table {
   background-color: white;
   border-radius: 2rem;
   padding: 2rem;
+  flex-wrap: wrap-reverse;
 }
 h1,
 p {
@@ -163,14 +164,11 @@ p {
 }
 
 img {
-  width: 400px;
-  height: 591px;
+  max-width: 25rem;
+  max-height: 37.5rem;
   border-radius: 0;
   /*min height set for mobile broswer*/
-  min-width: 300px;
-  min-height: 375px;
 }
-
 .title {
   font-family: "Roboto", sans-serif;
   font-size: 3rem;
